--- a/index.html
+++ b/index.html
@@ -9,12 +9,31 @@
 </head>
 <body>
     <header ><img src="/JavaScript/imagenes/logo-wels.png" alt=""></header>
-    <div class="container">
+<!--     <div class="container">
         <h1>Compra de colonias </h1>
-        <div class="img">
-            <img src="/JavaScript/imagenes/Copia de Colonia Inglesa-min.jpg" alt="" width=250px; height=325px;>
-            <img src="/JavaScript/imagenes/Copia de Colonia Heno-min.jpg" alt="" width=250px; height=325px;> 
-            <img src="/JavaScript/imagenes/Copia de Colonia Lavanda-min.jpg" alt=""width=250px; height=325px;>
+        <h2>Haga click en la imagen de la colonia que desea</h2>
+        <div class="imgnes">
+            <div class="image">
+                <img src="/JavaScript/imagenes/Copia de Colonia Inglesa-min.jpg" alt="" width=250px; height=325px;>
+                <div>
+                <h3>Colonia Inglesa</h3>
+                <p>Descubre nuestra fragancia única: una mezcla cautivadora de elegancia y sofisticación. Cada rociada te transporta a un mundo de lujo y feminidad. ¡Haz que cada día sea memorable con nuestro perfume irresistible!</p>
+                </div>
+            </div>
+            <div class="image">
+                <img src="/JavaScript/imagenes/Copia de Colonia Heno-min.jpg" alt="" width=250px; height=325px;>
+                <div>
+                <h3>Colonia Heno</h3>
+                <p>Descubre nuestra fragancia única: una mezcla cautivadora de elegancia y sofisticación. Cada rociada te transporta a un mundo de lujo y feminidad. ¡Haz que cada día sea memorable con nuestro perfume irresistible!</p>
+                </div>
+            </div>
+            <div class="image">
+                <img src="/JavaScript/imagenes/Copia de Colonia Lavanda-min.jpg" alt=""width=250px; height=325px;>
+                <div>
+                    <h3>Colonia Lavanda</h3>
+                    <p>Descubre nuestra fragancia única: una mezcla cautivadora de elegancia y sofisticación. Cada rociada te transporta a un mundo de lujo y feminidad. ¡Haz que cada día sea memorable con nuestro perfume irresistible!</p>
+                </div>
+            </div>
         </div>
         <p>Cantidad de colonias disponibles: 
                 <span id="colonias" class="numero">50</span>
@@ -22,7 +41,13 @@
         <div class="comprar">
             <button onclick="coloniasEnVenta()">COMPRAR</button>
         </div>
-    </div>  
+        <div class="product-list">
+            <h2>Productos Seleccionados</h2>
+            <ul id="selected-products"></ul>
+            <button onclick="filtrarProductos()">Comprar</button>
+        </div>
+    </div>   -->
+    <h1>Estoy trabajando para que funcione todo en conjunto, pero esta es una muestra de a donde quiero llegar. Utilizando las imagenes de las colonias</h1>
     <script src="main.js"></script>
 </body>
 </html>
